--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
-  text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.solar-term-item {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 8px 16px;
+  background-position: center;
+  background-size: cover;
+  color: #f1f1f1;
+  text-shadow: #000 0.1em 0.1em 0.2em;
+  font-size: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+.solar-term-item .content {
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.solar-term-item .name {
+  font-size: 40px;
+  margin-right: 16px;
+}
+
+.solar-term-item .desc {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  max-height: 44px;
+  transition: all 300ms;
+}
+
+.solar-term-item.active .desc {
+  display: block;
+  max-height: 200px;
 }
