--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-height: 44px;
-  transition: all 1000ms;
+  /* transition: all 1000ms; */
 }
 .solar-term-item.active {
   position: relative;
