--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-.App {
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .solar-term-item {
@@ -9,7 +12,8 @@
   background-position: center;
   background-size: cover;
   color: #f1f1f1;
-  text-shadow: #000 0.1em 0.1em 0.2em;
+  line-height: 24px;
+  text-shadow: #000 0.1em 0.1em 0.1em;
   font-size: 16px;
 }
 
@@ -31,7 +35,7 @@
 .solar-term-item.active {
   position: relative;
   z-index: 1;
-  box-shadow: 0 0 16px rgb(0, 0, 0, 1);
+  box-shadow: 0px 1px 2px -2px rgba(0, 0, 0, 0.16), 0px 3px 6px 0 rgba(0, 0, 0, 0.12), 0px 5px 12px 4px rgba(0, 0, 0, 0.09);
 }
 .solar-term-item.active .desc {
   max-height: 300px;
