--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   line-height: 24px;
   text-shadow: #000 0.1em 0.1em 0.1em;
   font-size: 16px;
+  transition: 300ms;
 }
 
 .solar-term-item .content {
@@ -35,7 +36,8 @@ body {
 .solar-term-item.active {
   position: relative;
   z-index: 1;
-  box-shadow: 0px 1px 2px -2px rgba(0, 0, 0, 0.16), 0px 3px 6px 0 rgba(0, 0, 0, 0.12), 0px 5px 12px 4px rgba(0, 0, 0, 0.09);
+  transform: translateY(-3px);
+  box-shadow: 0px 10px 12px rgb(0 0 0 / 60%);
 }
 .solar-term-item.active .desc {
   max-height: 300px;
