--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  backface-visibility: hidden;
 }
 
 .solar-term-item {
@@ -16,6 +17,7 @@ body {
   text-shadow: #000 0.1em 0.1em 0.1em;
   font-size: 16px;
   transition: 300ms;
+  backface-visibility: hidden;
 }
 
 .solar-term-item .content {
